--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
     "scripts": {
         "client": "cd client && npm start",
         "server": "nodemon server.js",
-        "dev": "concurrently --kill-ohers-on-fail \"npm server\"\"npm client\""
+        "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
     },
     "dependencies": {
         "body-parser": "^1.19.0",
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "yarn": "^1.22.10"
     },
     "devDependencies": {
         "concurrent;y": "^4.0.1"
